--- a/acrofestival/templates/pages/winteracro/snippets/footer.html
+++ b/acrofestival/templates/pages/winteracro/snippets/footer.html
@@ -1,4 +1,4 @@
-<!-- Footer -->{% load tinycontent_tags %}
+<!-- Footer -->{% load content_tags %}
           <footer id="footer">
             <section>
               <h2>Winter Acro</h2>
@@ -13,7 +13,7 @@
               <h2>General contact information</h2>
               <dl class="alt">
                 <dt>Whatsapp</dt>
-                <dd>{% tinycontent_simple 'winter_general_whatsapp' %}</dd>
+                <dd>{% content_snippet 'winter_general_whatsapp' %}</dd>
                 <dt>Email</dt>
                 <dd><a href="mailto:hello@urbanacro.com">hello@urbanacro.com</a></dd>
               </dl>
