--- a/acrofestival/templates/base.html
+++ b/acrofestival/templates/base.html
@@ -80,7 +80,7 @@
         <script type="text/javascript" src="{% static 'urbanacro/js/modal-box.js'%}"></script>
       <!-- place project specific Javascript in this file -->
         <script type="text/javascript" src="{% static 'urbanacro/js/ventcamp.js'%}"></script>
-        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDHwHR0NjhFjRP6_g4ExH8ErQgVJQu8oZ0&v=3&libraries=places"></script>
+        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key={{ GOOGLE_API_KEY }}&v=3&libraries=places"></script>
 
     {% endblock javascript %}
    {% analytical_body_bottom %}
