--- a/acrofestival/templates/pages/winteracro/location.html
+++ b/acrofestival/templates/pages/winteracro/location.html
@@ -1,10 +1,10 @@
 {% extends "pages/winteracro/basefest.html" %}
-{% block content %}{% load static %}{% load tinycontent_tags %}
+{% block content %}{% load static %}{% load content_tags %}
 <!-- Wrapper -->
 <div id="wrapper">
     <!-- Header -->
     <header id="header">
-        <h2>{% tinycontent_simple 'winter_acro_header_location' %}</h2>
+        <h2>{% content_snippet 'winter_acro_header_location' %}</h2>
         <p>How to get there and where will we sleep</p>
     </header>
     {% include "pages/winteracro/snippets/navnothome.html" %}
@@ -12,15 +12,15 @@
     <div id="main">
         <section id="hall" class="main">
             <h1>Hall</h1>
-            <h2>{% tinycontent_simple 'winter_hall_title' %}</h2>
-            <p>{% tinycontent_simple 'winter_hall_description' %}</p>
+            <h2>{% content_snippet 'winter_hall_title' %}</h2>
+            <p>{% content_snippet 'winter_hall_description' %}</p>
             <p>
             <span class="image right">
                     <img src="{% static "winteracro/images/2025/halle.png" %}" alt="winter accommodation for the urbanacro winter acro festival" />
             </span>
-            <h3>{% tinycontent_simple 'winter_hall_spa' %}</h3>
-            {% tinycontent_simple 'winter_hall_spa_description' %}
-            <a class="button" style="box-shadow:0px; background:#f3d216;" href="{% tinycontent_simple 'winter_hall_address_url' %}">
+            <h3>{% content_snippet 'winter_hall_spa' %}</h3>
+            {% content_snippet 'winter_hall_spa_description' %}
+            <a class="button" style="box-shadow:0px; background:#f3d216;" href="{% content_snippet 'winter_hall_address_url' %}">
                     Google Maps CLICK HERE
             </a>
             </br></br>
@@ -29,19 +29,19 @@
         <section id="location" class="main">
             <h1>Transportation</h1>
             <h2>By train:</h2>
-            {% tinycontent_simple 'winter_transportation_train' %}
+            {% content_snippet 'winter_transportation_train' %}
             <h3>Approximate travel times by train</h3>
-            {% tinycontent_simple 'winter_transportation_train_time' %}
+            {% content_snippet 'winter_transportation_train_time' %}
             <h3>Tickets</h3>
-            {% tinycontent_simple 'winter_transportation_tickets' %}
+            {% content_snippet 'winter_transportation_tickets' %}
             <a href="https://www.sbb.ch/">SBB</a></br>
             <a href="https://www.rome2rio.com/">Rome2Rio has offers worth checking</a></br>
             Prices are very relative.
             As a obvious general recommendation <u>book with time!</u></p>
             <h2>By car:</h2>
-            {% tinycontent_simple 'winter_transportation_car' %}
+            {% content_snippet 'winter_transportation_car' %}
             <h3>Approximate travel times by car</h3>
-            {% tinycontent_simple 'winter_transportation_car_time' %}
+            {% content_snippet 'winter_transportation_car_time' %}
             <footer class="major">
                 <ul class="actions">
                         <li><a href="{% url "winteracro"%}" class="button">Back</a></li>
