--- a/acrofestival/templates/pages/winteracro/pictures.html
+++ b/acrofestival/templates/pages/winteracro/pictures.html
@@ -1,5 +1,5 @@
 {% extends "pages/winteracro/basefest.html" %}
-{% block content %}{% load static %}{% load tinycontent_tags %}
+{% block content %}{% load static %}{% load content_tags %}
 <!-- Wrapper -->
     <div id="wrapper">
         <!-- Header -->
