--- a/acrofestival/templates/pages/urbanacro/home.html
+++ b/acrofestival/templates/pages/urbanacro/home.html
@@ -1,6 +1,84 @@
 {% extends 'base.html'%}
-{% block content %}
 {% load static %}{% load tinycontent_tags %}{% load content_tags %}
+
+{% block title %}Urban Acro Festival Zürich 2025 | August 1-3 | Acroyoga & Partner Acrobatics{% endblock title %}
+
+{% block meta_description %}Join Urban Acro Festival Zürich 2025 (August 1-3) for 3 days of acroyoga, partner acrobatics, handstands, and healing arts. International teachers, workshops, and community jam sessions in the heart of Zürich.{% endblock meta_description %}
+
+{% block meta_keywords %}Urban Acro Festival 2025, Acroyoga Zürich, Partner Acrobatics Zürich, Handstand Workshop Zürich, Acro Festival Switzerland, August 2025 Events Zürich, Acrobatics Workshop, Movement Festival{% endblock meta_keywords %}
+
+{% block canonical_url %}https://www.acrofestival.ch/urbanacro/{% endblock canonical_url %}
+
+{% block og_title %}Urban Acro Festival Zürich 2025 | August 1-3{% endblock og_title %}
+{% block og_description %}Join us for 3 days of acroyoga, partner acrobatics, handstands, and healing arts in Zürich. International teachers, workshops, and community jam sessions.{% endblock og_description %}
+{% block og_url %}https://www.acrofestival.ch/urbanacro/{% endblock og_url %}
+{% block og_type %}event{% endblock og_type %}
+
+{% block twitter_title %}Urban Acro Festival Zürich 2025 | August 1-3{% endblock twitter_title %}
+{% block twitter_description %}Join us for 3 days of acroyoga, partner acrobatics, handstands, and healing arts in Zürich. International teachers, workshops, and community jam sessions.{% endblock twitter_description %}
+
+{% block structured_data %}
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Event",
+  "name": "Urban Acro Festival Zürich 2025",
+  "description": "Join Urban Acro Festival Zürich 2025 for 3 days of acroyoga, partner acrobatics, handstands, and healing arts. International teachers, workshops, and community jam sessions in the heart of Zürich.",
+  "startDate": "2025-08-01T10:00:00+02:00",
+  "endDate": "2025-08-03T17:30:00+02:00",
+  "eventStatus": "https://schema.org/EventScheduled",
+  "eventAttendanceMode": "https://schema.org/OfflineEventAttendanceMode",
+  "location": {
+    "@type": "Place",
+    "name": "Zirkus Quartier - Chnopf",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Hohlstrasse 256",
+      "addressLocality": "Zürich",
+      "postalCode": "8004",
+      "addressCountry": "CH"
+    }
+  },
+  "image": [
+    "{% static 'urbanacro/images/logo_acrofestival.jpg'%}",
+    "{% static 'urbanacro/images/acrofestival_3rd_edition.jpg'%}"
+  ],
+  "organizer": {
+    "@type": "Organization",
+    "name": "Urban Acro",
+    "url": "https://www.urbanacro.com",
+    "email": "hello@urbanacro.com"
+  },
+  "offers": {
+    "@type": "Offer",
+    "name": "Full Festival Pass",
+    "price": "180",
+    "priceCurrency": "CHF",
+    "availability": "https://schema.org/InStock",
+    "url": "https://www.acrofestival.ch/urbanacro/",
+    "description": "Access to all workshops, handstand sessions, coaching sessions, evening sauna, snacks & coffee, and hall sleeping option"
+  },
+  "performer": [
+    {
+      "@type": "Person",
+      "name": "Fer & Fifi"
+    },
+    {
+      "@type": "Person", 
+      "name": "NSAcrobalance"
+    },
+    {
+      "@type": "Person",
+      "name": "Manas Sahoo"
+    }
+  ],
+  "keywords": ["acroyoga", "partner acrobatics", "handstands", "yoga", "movement", "festival", "zürich"],
+  "category": "Sports & Fitness"
+}
+</script>
+{% endblock structured_data %}
+
+{% block content %}
     <div class="preloader-mask">
         <div class="preloader"></div>
     </div>
@@ -27,8 +105,8 @@
             <div class="container">
                 <div class="col-sm-2 col-xs-12 navigation-header">
                     <a href="#" class="logo">
-                        <img src="{% static 'urbanacro/images/ventcamp_logo.png' %}" alt="Urban Acro Festival" width="120" height="45" class="retina-hide">
-                        <img src="{% static 'urbanacro/images/ventcamp_logo@2x.png' %}" alt="Urban Acro Festival" width="120" height="45" class="retina-show">
+                        <img src="{% static 'urbanacro/images/ventcamp_logo.png' %}" alt="Urban Acro Festival Zürich 2025 Logo" width="120" height="45" class="retina-hide">
+                        <img src="{% static 'urbanacro/images/ventcamp_logo@2x.png' %}" alt="Urban Acro Festival Zürich 2025 Logo" width="120" height="45" class="retina-show">
                     </a>
                     <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation" aria-expanded="false" aria-controls="navigation">
                         <span class="icon-bar"></span>
@@ -78,7 +156,7 @@
                 <div class="tab-content">
                     <div id="horizontal_tab1" class="tab-pane fade active in">
                         <div class="col-sm-5 images-column">
-                            <img src="{% static 'urbanacro/images/acrofestival_3rd_edition.jpg' %}" alt="" class="img-responsive" />
+                            <img src="{% static 'urbanacro/images/acrofestival_3rd_edition.jpg' %}" alt="Urban Acro Festival 2024 participants enjoying partner acrobatics and acroyoga workshops in Zürich" class="img-responsive" />
                         </div>
                         <div class="col-sm-7 align-left">
                             <h6>{% content_snippet "urban_general_title" %}</h6>
@@ -93,13 +171,13 @@
                             <p> {% content_snippet "urban_general_workshops" %}</p>
                         </div>
                         <div class="col-sm-5 images-column">
-                            <img src="{% static "urbanacro/images/acrofestival_workshops_2024.jpg"%}" alt="Urban Acro Festival 2024 workshops in Zürich" class="img-responsive" />
+                            <img src="{% static "urbanacro/images/acrofestival_workshops_2024.jpg"%}" alt="Urban Acro Festival 2024 acroyoga and partner acrobatics workshops in Zürich" class="img-responsive" />
                         </div>
                     </div>
 
                     <div id="horizontal_tab3" class="tab-pane fade">
                         <div class="col-sm-5 images-column">
-                            <img src="{% static "urbanacro/images/acrofestival_extra_dj.jpg" %}" alt="" class="img-responsive" />
+                            <img src="{% static "urbanacro/images/acrofestival_extra_dj.jpg" %}" alt="DJ playing music at Urban Acro Festival evening event with participants" class="img-responsive" />
                         </div>
                         <div class="col-sm-7 align-left">
                             <h6>What's included</h6>
@@ -114,7 +192,7 @@
     <!-- Info Section -->
     <section class="fullwidth-section">
         <div class="fullwidth-path">
-                <div class="fullwidth-section-bg bg-right" style="background-image: url('{% static "urbanacro/images/acrofestival_food_line.jpg"%}');"></div>
+                <div class="fullwidth-section-bg bg-right" style="background-image: url('{% static "urbanacro/images/acrofestival_food_line.jpg"%}');" role="img" aria-label="Participants enjoying healthy food at Urban Acro Festival food area"></div>
             <div class="col-sm-6 align-right fullwidth-column">
                 <article>
                     <h3>Food Corner</h3>
@@ -123,7 +201,7 @@
             </div>
         </div>
         <div class="fullwidth-path">
-                <div class="fullwidth-section-bg bg-left" style="background-image: url('{% static 'urbanacro/images/acrofestival_sleeping.jpg'%}');"></div>
+                <div class="fullwidth-section-bg bg-left" style="background-image: url('{% static 'urbanacro/images/acrofestival_sleeping.jpg'%}');" role="img" aria-label="Comfortable sleeping area setup at Urban Acro Festival with mats and blankets"></div>
             <div class="col-sm-6 col-sm-offset-6 align-left fullwidth-column">
                 <article>
                     <h3>Sleeping Area</h3>
@@ -214,7 +292,7 @@
             <div class="row">
             <div class="col-sm-4">
                 <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/ferandfifi_urbanacro_festival.jpg' %}" alt="Fer and Fifi from Spain and Israel at the urbanacro festival in Zürich" class="img-responsive"></div>
+                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/ferandfifi_urbanacro_festival.jpg' %}" alt="Fer and Fifi, acroyoga teachers from Spain and Israel teaching at Urban Acro Festival Zürich" class="img-responsive"></div>
                     <h3 class="name">{% content_snippet "urbanacro_teachers_teacher1_name" %}</h3>
                     <p class="text-alt"><small>{% content_snippet "urbanacro_teaschers_teacher1_team" %}</small></p>
                     <p class="about">{% content_snippet "urbanacro_teachers_teacher1_about" %}</p>
@@ -225,7 +303,7 @@
             </div>
             <div class="col-sm-4">
                 <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/nsacrobalance_urbanacro_festival.jpg' %}" alt="NSAcrobalance Jelena and Nenad from Serbia at the urbanacro festival in zürich" class="img-responsive"></div>
+                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/nsacrobalance_urbanacro_festival.jpg' %}" alt="NSAcrobalance duo Jelena and Nenad from Serbia teaching partner acrobatics at Urban Acro Festival Zürich" class="img-responsive"></div>
                     <h3 class="name">{% content_snippet "urbanacro_teachers_teacher2_name" %}</h3>
                     <p class="text-alt"><small>{% content_snippet "urbanacro_teaschers_teacher2_team" %}</small></p>
                     <p class="about">{% content_snippet "urbanacro_teachers_teacher2_about" %}</p>
@@ -236,7 +314,7 @@
             </div>
             <div class="col-sm-4">
                 <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/manas_acro_urbanacro_festival.jpg' %}" alt="Manas Sahoo from Sweden at the urbanacro festival in zürich" class="img-responsive"></div>
+                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/manas_acro_urbanacro_festival.jpg' %}" alt="Manas Sahoo, handstand and acrobatics teacher from Sweden at Urban Acro Festival Zürich" class="img-responsive"></div>
                     <h3 class="name">{% content_snippet "urbanacro_teachers_teacher3_name" %}</h3>
                     <p class="text-alt"><small>{% content_snippet "urbanacro_teaschers_teacher3_team" %}</small></p>
                     <p class="about">{% content_snippet "urbanacro_teachers_teacher3_about" %}</p>
@@ -250,7 +328,7 @@
             <div class="row">
             <div class="col-sm-4">
                 <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/coming_soon.png' %}" alt="Coming soon teacher at the urbanacro festival in zürich" class="img-responsive"></div>
+                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/coming_soon.png' %}" alt="Upcoming teacher announcement for Urban Acro Festival Zürich 2025" class="img-responsive"></div>
                     <h3 class="name">{% content_snippet "urbanacro_teachers_teacher4_name" %}</h3>
                     <p class="text-alt"><small>{% content_snippet "urbanacro_teachers_teacher4_team" %}</small></p>
                     <p class="about">{% content_snippet "urbanacro_teachers_teacher4_about" %}</p>
@@ -261,7 +339,7 @@
             </div>
             <div class="col-sm-4">
                 <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/coming_soon.png' %}" alt="Coming soon teacher at the urbanacro festival in zürich" class="img-responsive"></div>
+                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/coming_soon.png' %}" alt="Upcoming teacher announcement for Urban Acro Festival Zürich 2025" class="img-responsive"></div>
                     <h3 class="name">{% content_snippet "urbanacro_teachers_teacher5_name" %}</h3>
                     <p class="text-alt"><small>{% content_snippet "urbanacro_teachers_teacher5_team" %}</small></p>
                     <p class="about">{% content_snippet "urbanacro_teachers_teacher5_about" %}</p>
@@ -272,7 +350,7 @@
             </div>
             <div class="col-sm-4">
                 <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/coming_soon.png' %}" alt="Coming soon teacher at the urbanacro festival in zürich" class="img-responsive"></div>
+                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/coming_soon.png' %}" alt="Upcoming teacher announcement for Urban Acro Festival Zürich 2025" class="img-responsive"></div>
                     <h3 class="name">{% content_snippet "urbanacro_teachers_teacher6_name" %}</h3>
                     <p class="text-alt"><small>{% content_snippet "urbanacro_teachers_teacher6_team" %}</small></p>
                     <p class="about">{% content_snippet "urbanacro_teachers_teacher6_about" %}</p>
@@ -881,8 +959,8 @@
             <br/>
 
             <div class="sponsors">
-                <div class="sponsor big"><a href="https://www.urbanacro.com/"><img src="{% static 'urbanacro/images/sponsors/urbanacro.png' %}" alt="Urbanacro as host of the Urban Acro Festival"></a></div>
-                <div class="sponsor big"><a href="https://zirkusquartier.ch/"><img src="{% static 'urbanacro/images/sponsors/chnopf.png' %}" alt="Zirkus Quartier colaborator of the Urban Acro festival organized by Urbanacro"></a></div>
+                <div class="sponsor big"><a href="https://www.urbanacro.com/"><img src="{% static 'urbanacro/images/sponsors/urbanacro.png' %}" alt="Urban Acro - Host and organizer of Urban Acro Festival Zürich 2025"></a></div>
+                <div class="sponsor big"><a href="https://zirkusquartier.ch/"><img src="{% static 'urbanacro/images/sponsors/chnopf.png' %}" alt="Zirkus Quartier Chnopf - Venue partner for Urban Acro Festival Zürich 2025"></a></div>
             </div>
 
         </div>
