--- a/acrofestival/templates/pages/urbanacro/home.html
+++ b/acrofestival/templates/pages/urbanacro/home.html
@@ -70,6 +70,10 @@
     {
       "@type": "Person",
       "name": "Manas Sahoo"
+    },
+    {
+      "@type": "Person",
+      "name": "Nelson"
     }
   ],
   "keywords": ["acroyoga", "partner acrobatics", "handstands", "yoga", "movement", "festival", "zürich"],
@@ -294,7 +298,7 @@
                 <div class="speaker">
                     <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/ferandfifi_urbanacro_festival.jpg' %}" alt="Fer and Fifi, acroyoga teachers from Spain and Israel teaching at Urban Acro Festival Zürich" class="img-responsive"></div>
                     <h3 class="name">{% content_snippet "urbanacro_teachers_teacher1_name" %}</h3>
-                    <p class="text-alt"><small>{% content_snippet "urbanacro_teaschers_teacher1_team" %}</small></p>
+                    <p class="text-alt"><small>{% content_snippet "urbanacro_teachers_teacher1_team" %}</small></p>
                     <p class="about">{% content_snippet "urbanacro_teachers_teacher1_about" %}</p>
                     <ul class="speaker-socials">
                         {% content_snippet "urbanacro_teacher1_instagram" %}
@@ -305,7 +309,7 @@
                 <div class="speaker">
                     <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/nsacrobalance_urbanacro_festival.jpg' %}" alt="NSAcrobalance duo Jelena and Nenad from Serbia teaching partner acrobatics at Urban Acro Festival Zürich" class="img-responsive"></div>
                     <h3 class="name">{% content_snippet "urbanacro_teachers_teacher2_name" %}</h3>
-                    <p class="text-alt"><small>{% content_snippet "urbanacro_teaschers_teacher2_team" %}</small></p>
+                    <p class="text-alt"><small>{% content_snippet "urbanacro_teachers_teacher2_team" %}</small></p>
                     <p class="about">{% content_snippet "urbanacro_teachers_teacher2_about" %}</p>
                     <ul class="speaker-socials">
                         {% content_snippet "urbanacro_teacher2_instagram" %}
@@ -316,7 +320,7 @@
                 <div class="speaker">
                     <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/manas_acro_urbanacro_festival.jpg' %}" alt="Manas Sahoo, handstand and acrobatics teacher from Sweden at Urban Acro Festival Zürich" class="img-responsive"></div>
                     <h3 class="name">{% content_snippet "urbanacro_teachers_teacher3_name" %}</h3>
-                    <p class="text-alt"><small>{% content_snippet "urbanacro_teaschers_teacher3_team" %}</small></p>
+                    <p class="text-alt"><small>{% content_snippet "urbanacro_teachers_teacher3_team" %}</small></p>
                     <p class="about">{% content_snippet "urbanacro_teachers_teacher3_about" %}</p>
                     <ul class="speaker-socials">
                         {% content_snippet "urbanacro_teacher3_instagram" %}
@@ -328,7 +332,7 @@
             <div class="row">
             <div class="col-sm-4">
                 <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/coming_soon.png' %}" alt="Upcoming teacher announcement for Urban Acro Festival Zürich 2025" class="img-responsive"></div>
+                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/nelson_urbanacro_festival.jpg' %}" alt="Nelson, acro teacher from Portugal teaching at Urban Acro Festival Zürich" class="img-responsive"></div>
                     <h3 class="name">{% content_snippet "urbanacro_teachers_teacher4_name" %}</h3>
                     <p class="text-alt"><small>{% content_snippet "urbanacro_teachers_teacher4_team" %}</small></p>
                     <p class="about">{% content_snippet "urbanacro_teachers_teacher4_about" %}</p>
